<resources>
    <string name="app_name">PopMovies</string>

    <!--Adapter-->
    <string name="image_base_url">http://image.tmdb.org/t/p/w185</string>
    <string name="youtube_base_url">https://www.youtube.com/watch?v=</string>
    <string name="poster_thumb_contentDescrip">Thumbnail of Poster</string>
    <string name="author_review_contentDescrip">Author of review</string>

    <!--DetailActivity-->
    <string name="synopsis_contDescrip">Movie Description</string>
    <string name="synopsis_label_ContDescrip">Synopsis</string>
    <string name="synopsis_label">Synopsis:</string>
    <string name="release_date_label">Release Date:</string>
    <string name="release_date_label_contDescrip">Release date label</string>
    <string name="release_date_contDescrip">Release Date of Movie</string>
    <string name="user_rating_label">User Rating Label</string>
    <string name="user_rating_label_contDescrip">User Rating:</string>
    <string name="user_rating">User Rating</string>
    <string name="movie_poster_contDescrip">Movie Poster</string>
    <string name="review_contDescrip">Review</string>
    <string name="reviews_label">Reviews:</string>
    <string name="favourite_bt_menu">Favourite</string>
    <string name="trailer_label">Trailer:</string>
    <string name="trailer_label_contDescrip">Trailer Label</string>
    <string name="play_button_contDescrip">Play Button for the trailer.</string>

    <!--Alerts & Errors -->
    <string name="fav_added">This movie was added to your favourites.</string>
    <string name="fav_removed">This movie has been removed from your favourite list.</string>
    <string name="no_data">No movies are found based on your provided settings. Please adapt them and try again</string>
    <string name="no_internet">Please check your internet connection and try again by tapping here.</string>
    <string name="no_favourite">You have not favourited any movies so far.</string>
    <string name="alert_no_review">There are no reviews for this film.</string>
    <string name="error_adding_fav">An error occurred when trying to add this movie to your favourites.</string>
    <string name="error_removing_fav">An error occurred when trying to remove this movie from your favourite list.</string>
    <string name="alert_no_trailer">There are no trailers available for this movie.</string>

    <!--Settings-->
    <string name="display_label">Display movies by …</string>
    <string name="display_key">Display movies</string>
    <string name="popularity_display_label_default">Display movies sort by popularity</string>
    <string name="rated_display_label">Display movies sorted by top rated</string>
    <string name="favourite_display_label">Display Favourites</string>
    <string name="title_activity_setting">Settings</string>
</resources>