<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.example.android.popmovies.DetailActivity">

            <ImageView
                android:id="@+id/poster_thumbnail_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/detail_image_margin"
                android:layout_marginStart="@dimen/detail_image_margin"
                android:layout_marginTop="@dimen/detail_image_margin"
                android:contentDescription="@string/poster_thumb_contentDescrip"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@mipmap/ic_launcher" />

            <ImageButton
                android:id="@+id/favourite_bt"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="@dimen/detail_image_margin"
                android:layout_marginTop="@dimen/detail_image_margin"
                android:contentDescription="@string/favourite_button_contDescrip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_star"
                android:tint="@android:color/darker_gray"
                android:background="@android:color/transparent"
                android:layout_marginRight="@dimen/detail_image_margin" />

            <TextView
                android:id="@+id/user_rating_label_tv"
                style="@style/label"
                android:layout_marginBottom="@dimen/detail_text_margin"
                android:contentDescription="@string/user_rating_label"
                android:text="@string/user_rating_label_contDescrip"
                app:layout_constraintBottom_toTopOf="@+id/release_date_label"
                app:layout_constraintStart_toStartOf="@+id/release_date_label" />

            <TextView
                android:id="@+id/user_rating"
                style="@style/text"
                android:layout_marginLeft="@dimen/detail_text_margin"
                android:layout_marginStart="@dimen/detail_text_margin"
                android:contentDescription="@string/user_rating"
                app:layout_constraintBottom_toBottomOf="@+id/user_rating_label_tv"
                app:layout_constraintStart_toEndOf="@+id/user_rating_label_tv"
                tools:text="6.4" />

            <TextView
                android:id="@+id/release_date_label"
                style="@style/label"
                android:layout_marginLeft="@dimen/detail_text_margin"
                android:layout_marginStart="@dimen/detail_text_margin"
                android:contentDescription="@string/release_date_label_contDescrip"
                android:text="@string/release_date_label"
                app:layout_constraintBottom_toBottomOf="@+id/poster_thumbnail_iv"
                app:layout_constraintStart_toEndOf="@+id/poster_thumbnail_iv" />

            <TextView
                android:id="@+id/release_date"
                style="@style/text"
                android:layout_marginLeft="@dimen/detail_text_margin"
                android:layout_marginStart="@dimen/detail_text_margin"
                android:contentDescription="@string/release_date_contDescrip"
                app:layout_constraintBottom_toBottomOf="@+id/release_date_label"
                app:layout_constraintStart_toEndOf="@+id/release_date_label"
                tools:text="01/01/2010" />

            <TextView
                android:id="@+id/synopsis_label_tv"
                style="@style/label"
                android:layout_marginTop="@dimen/detail_text_margin"
                android:contentDescription="@string/synopsis_label_ContDescrip"
                android:text="@string/synopsis_label"
                app:layout_constraintStart_toStartOf="@+id/poster_thumbnail_iv"
                app:layout_constraintTop_toBottomOf="@+id/poster_thumbnail_iv" />

            <TextView
                android:id="@+id/synopsis_tv"
                style="@style/text"
                android:layout_width="0dp"
                android:layout_marginEnd="@dimen/detail_text_margin"
                android:layout_marginRight="@dimen/detail_text_margin"
                android:layout_marginTop="@dimen/detail_text_margin"
                android:contentDescription="@string/synopsis_contDescrip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/synopsis_label_tv"
                app:layout_constraintTop_toBottomOf="@+id/synopsis_label_tv"
                tools:text="A couple of lines describing the synopsis of the movie." />

            <TextView
                android:id="@+id/review_label_tv"
                style="@style/label"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/review_contDescrip"
                android:text="@string/reviews_label"
                app:layout_constraintStart_toStartOf="@+id/synopsis_tv"
                app:layout_constraintTop_toBottomOf="@+id/synopsis_tv" />

            <include
                layout="@layout/activity_review"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/detail_text_margin"
                android:layout_marginRight="@dimen/detail_text_margin"
                android:layout_marginTop="@dimen/detail_text_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/review_label_tv"
                app:layout_constraintTop_toBottomOf="@+id/review_label_tv" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>